k8s/00-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: wb-api
  labels:
    name: wb-api
