k8s/07-wb-api-statefulset.yaml
# az postgres flexible-server create -g aks_test_clu_group -n wb-db --public-access all -l eastus --sku Standard_B1ms --tier Burstable

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wb-api-statefulset
  namespace: wb-api
  labels:
    app: wb-api-statefulset
spec:
  replicas: 1
  serviceName: wb-api
  selector:
    matchLabels:
      app: wb-api
  template:
    metadata:
      labels:
        app: wb-api
    spec:
      containers:
        - name: wb-api
          image: motivus/wb-api:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "500m"
              memory: 1Gi
            requests:
              cpu: "500m"
              memory: 1Gi
